# FlowPay

./: .gitignore  README.md  cookies.txt
SDK/NodeSDK/: flowpay_sdk.js  test.js
SDK/PythonSDK/: flowpay_sdk.py
backend/: .env  Database.hs  Dockerfile  Procfile  cookies.txt  nixpacks.toml  package.yaml  payment-backend.cabal  payment-engine.cabal  stack.yaml
backend/.stack-work/: stack.sqlite3
backend/app/: Main.hs
backend/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
backend/src/: Api.hs  App.hs  Auth.hs  Main.hs  Types.hs
backend/src/DB/: Init.hs  Schema.hs
backend/src/Handlers/: AccountHandler.hs  AuthHandler.hs  MerchantHandler.hs  PaymentHandler.hs  UserHandler.hs
backend/src/Models/: Merchant.hs  Payment.hs  User.hs
backend/src/Utils/: Logger.hs  Retry.hs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/Components/: Footer.tsx  Header.tsx  ProtectedRoute.tsx
frontend/src/Context/: AuthContext.tsx
frontend/src/Layout/: Layout.tsx
frontend/src/Modals/: ApiKey.tsx  Auth.tsx
frontend/src/pages/: Dashboard.tsx  Demo.tsx  DocsPage.tsx  Home.tsx
